--- a/app/package.json
+++ b/app/package.json
@@ -8,10 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-regular-svg-icons": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/vue-fontawesome": "^3.0.1",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "mitt": "^3.0.0",
     "register-service-worker": "^1.7.2",
-    "tiny-emitter": "^2.1.0",
     "vue": "^3.2.13",
     "vuex": "^4.0.2"
   },
@@ -29,7 +33,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
-    "prettier": "^2.4.1",
+    "prettier": "2.7.1",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
     "typescript": "~4.5.5"
