--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/vue-fontawesome": "^3.0.1",
     "axios": "^0.27.2",
+    "bulma": "^0.9.4",
     "core-js": "^3.8.3",
     "mitt": "^3.0.0",
     "register-service-worker": "^1.7.2",
