--- a/app/package.json
+++ b/app/package.json
@@ -15,12 +15,14 @@
     "axios": "^0.27.2",
     "bulma": "^0.9.4",
     "core-js": "^3.8.3",
+    "fabric": "^5.2.4",
     "mitt": "^3.0.0",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@types/fabric": "^4.5.11",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
